# HEN-Mandelbrot-Explorer

./: CMakeLists.txt  README.md
include/henme/: Cli.h  ColorMapper.h  CpuRenderer.h  ImageBuffer.h  RenderConfig.h
src/: Cli.cpp  ColorMapper.cpp  CpuRenderer.cpp  ImageBuffer.cpp  main.cpp
tests/: smoke_benchmark.py  smoke_render.py
